# Actually-Robust-Training

./: .gitignore  .readthedocs.yaml  README.md  benchmarks.ipynb  issues.md  pyproject.toml  readthedocs.yml  relabel.ipynb  requirements.txt  setup.cfg  test.ipynb  tox.ini
.github/workflows/: tests.yml
art/: __main__.py  art_logger.py  checks.py  constants.py  core.py  datamodules.py  datasets.py  decorators.py  enums.py  experiment_state.py  litmodules.py  loggers.py  metric_calculator.py  metrics.py  metrics_calculator.py  modules.py  networks.py  paths.py  project.py  sourcesep_utils.py  steps.py  train.py  turn_regularizations.py  utils.py  visualization_decorators.py
art/cli/: __main__.py  create_project.py  main.py  utils.py
art/configs/: to_do.md  train.yaml  train.yaml.orig
art/configs/datamodule/: efficientword.yaml  efficientwordoriginal.yaml  google_commands.yaml  musdb18.yaml  sanity_check.yaml  sdx_bleeding.yaml  sdx_labelnoise.yaml
art/configs/logger/: mock.yaml  neptune.yaml  neptune.yaml.orig  neptune_no_check.yaml
art/configs/module/: classification.yaml  efficientwordnet.yaml  source_separation.yaml
art/configs/trainer/: default.yaml
art/core/: MetricCalculator.py  __init__.py  exceptions.py
art/core/base_components/: BaseDataset.py  BaseModel.py  base_model.py
art/core/experiment/: Experiment.py  steps.py
art/core/experiment/step/: checks.py  step_savers.py  steps.py
art/core/project_definitions/: BuildersDictionary.py
art/core/project_definitions/builders/: ClassificationProjectBuilder.py  ProjectBuilder.py
art/core/visualizer/: ImageVisualizer.py  TextVisualizer.py  VideoVisualizer.py  Visualizer.py  visualization_decorators.py
art/core/webapi/: WebAPI.py
art/dashboard/: CheckUI.py  Dashboard.py  StepUI.py  app.py  backend.py  const.py  help.py  layout.py  timeline.py
art/dashboard/assets/: timeline.css
art/dashboard/ideal_logs/AlreadyExistingSolutionBaseline_3_Evaluate Baseline/: log.txt  results.json
art/dashboard/ideal_logs/HeuristicBaseline_1_Evaluate Baseline/: log.txt  results.json
art/dashboard/ideal_logs/MNISTModel_4_Check Loss On Init/: log.txt  results.json
art/data/: collate.py  datamodules.py  dummy_loader.py  organizers.py  utils.py
art/experiment/: Experiment.py  experiment_state.py
art/new_structure/core/base_components/: BaseModel.py
art/new_structure/core/experiment/: Experiment.py  steps.py
art/new_structure/core/project_definitions/: BuildersDictionary.py
art/new_structure/core/visualizer/: ImageVisualizer.py  VideoVisualizer.py
art/new_structure/dashboard/: CheckUI.py
art/similarity/: data.py  modules.py  networks.py
art/similarity/efficientwordnet/: data.py  modules.py  networks.py  testing.ipynb
art/step/: checks.py  step.py  step_savers.py  step_state.py  steps.py
art/utils/: LoggerAdapter.py  art_logger.py  ensemble.py  enums.py  exceptions.py  loggers.py  metrics.py  neptun_api_wrapper.py  paths.py  plotters.py  quickstart.py  savers.py  sourcesep_augment.py  thresholders.py
docs/: index.rst  requirements.txt
docs/source/: conf.py  index.rst
docs/source/apidocs/: art.cli.rst  art.rst  art.utils.rst  index.rst  modules.rst
docs/source/apidocs/art/: art.data.collate.rst  art.data.datamodules.rst  art.data.dummy_loader.rst  art.data.rst  art.enums.rst  art.litmodules.rst  art.networks.rst  art.rst  art.train.rst  art.utils.loggers.rst  art.utils.neptun_api_wrapper.rst  art.utils.plotters.rst  art.utils.rst
new_structure/src/cli/: CLI.py
new_structure/src/core/base_components/: BaseDataset.py
new_structure/src/dashboard/: Dashboard.py  ExperimentUI.py
stubs/cookiecutter/main/: __init__.pyi
stubs/github/: __init__.pyi
stubs/lightning/: __init__.pyi
stubs/lightning/pytorch/: accelerators.pyi  loggers.pyi  utilities.pyi
stubs/lightning/utilities/: seed.pyi
stubs/neptune/: __init__.pyi
stubs/neptune/exceptions/: __init__.pyi
stubs/neptune/utils/: __init__.pyi
stubs/wandb/: __init__.pyi
temp_plots/: 0.pickle  1.pickle  2.pickle  3.pickle  4.pickle  5.pickle  6.pickle  7.pickle
templates/basetemplate/: MyDataset.py
templates/basetemplate/dashboard/: MyDashboard.py
templates/basetemplate/exp1/: Dockerfile  MyDataset.py  MyExperiment.py  MyModel.py  baselines.py
templates/basetemplate/webapi/: MyAPI.py
tests/: test_import.py  test_jupyter_tutorial.py  test_quickstart.py  test_regularize_tutorial.py  utils.py
tests/data/: test_files.txt
tests/utils/: test_files.txt
tests/utils/checkpoints/: state.json
(+32 files in other folders)
