[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audio_research_toolkit"
version = "0.0.1"
authors = [
  { name="GHOST", email="ghost@put.poznan.pl" },
]
description = "Audio Package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "datasets>=2.11.0",
  "numpy>=1.23.5",
  "lightning>=1.9",
  "torchmetrics>=0.11.0",
  "torch>=1.13.1",
  "hydra-core>=1.3.2",
  "neptune-client>=1.1.1",
  "matplotlib~=3.6",
  "lovely-tensors",
  "cookiecutter>=2.3.1",
  "typer==0.4.2"
]

[project.optional-dependencies]
dev = [
  "flake8>=6.0.0",
  "tox>=4.4.7",
  "pytest>=7.2.2",
  "pytest-cov>=4.0.0",
  "mypy>=1.1.1",
  "black>=23.1.0",
  "myst_nb==0.17.2",
  "sphinx-autodoc2==0.4.2"
]

[project.urls]
"Homepage" = "https://github.com/pypa/audioresearchtoolkit"
"Bug Tracker" = "https://github.com/pypa/audioresearchtoolkit/issues"

[tool.pytest.ini_options]
addopts = "--cov=art"
testpaths = [
  "tests",
]
