[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "actually-robust-training"
version = "0.0.1"
authors = [
  { name="Sebastian Chwilczyński", email="sebastian.chwilczynski@student.put.poznan.pl" },
  { name="Kacper Trębacz", email="kacper.trebacz@student.put.poznan.pl" },
  { name="Karol Cyganik", email="karol.cyganik@student.put.poznan.pl" },
  { name="Mateusz Małecki", email="mateusz.malecki.1@student.put.poznan.pl" },
]
description = "Package for improving your training pipelines"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "datasets>=2.11.0",
  "numpy>=1.23.5",
  "lightning>=1.9",
  "torchmetrics>=0.11.0",
  "torch>=1.13.1",
  "hydra-core>=1.3.2",
  "neptune>=1.6.2",
  "matplotlib~=3.6",
  "lovely-tensors",
  "cookiecutter>=2.3.1",
  "typer==0.4.2",
  "wandb>=0.15.11"
]

[project.optional-dependencies]
dev = [
  "flake8>=6.0.0",
  "tox>=4.4.7",
  "pytest>=7.2.2",
  "pytest-cov>=4.0.0",
  "mypy>=1.1.1",
  "black>=23.1.0",
  "myst_nb==0.17.2",
  "sphinx-autodoc2==0.4.2"
  "nbmake" >= 0.5"
]

[project.urls]
"Homepage" = "None"
"Bug Tracker" = "None"

[tool.pytest.ini_options]
addopts = "--cov=art"
testpaths = [
  "tests",
]
