[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
description = "ART - Actually Robust Training framework - a framework that teaches good practices when training deep neural networks. "


name = "art-training"
version = "0.0.2"
authors = [
  { name = "Sebastian Chwilczynski", email = "sebastian.chwilczynski@student.put.poznan.pl" },
  { name = "Kacper Trebacz", email = "kacper.trebacz@student.put.poznan.pl" },
  { name = "Mateusz Malecki", email = "mateusz.malecki.1@student.put.poznan.pl" },
  { name = "Karol Cyganik", email = "karol.cyganik@student.put.poznan.pl" },
]
readme = "README.md"
keywords = ['deep learning', 'pytorch', 'training', 'framework']
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "datasets>=2.11.0",
  "lightning>=1.9",
  "torch>=1.13.1",
  "matplotlib~=3.6",
  "cookiecutter>=2.3.1",
  "typer==0.4.2",
  "loguru==0.7.2",
  "PyGithub==2.1.1",
]

[project.optional-dependencies]
dev = [
  "flake8>=6.0.0",
  "tox>=4.4.7",
  "pytest>=7.2.2",
  "pytest-cov>=4.0.0",
  "mypy>=1.1.1",
  "black>=23.1.0",
  "myst_nb==0.17.2",
  "sphinx-autodoc2==0.4.2",
  "ipykernel>=6.26.0",
  "nbconvert>=7.9.2",
]
dashboard = [
  "dash_mantine_components",
  "dash_bootstrap_components",
  "dash",
  "plotly"
]

[project.urls]
"Homepage" = "https://github.com/sebchw/art"
"Bug Tracker" = "https://github.com/sebchw/art/issues"

[tool.pytest.ini_options]
addopts = "--cov=art"
testpaths = ["tests"]