[options.package_data]
art = py.typed

[options.entry_points]
console_scripts =
    script = art.cli.main:main

[flake8] # it doesn't support toml
extend-ignore = E203 
max-line-length=160
exclude =
    .git,
    __pycache__,
    stubs/*,

[mypy]
mypy_path=art:stubs

[mypy-art.dashboard.*]
ignore_errors = True